# oswi_toolkit

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  environment.yml  version.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in  ncl_default.cpt  oswi_dem_bath_0.250.nc  oswi_dem_bath_0.360.nc  oswi_dem_bath_0.500.nc  oswi_dem_bath_1.000.nc  oswint.cpt  waxler.cpt
script/: Makefile.am  Makefile.in  oswi2kmz
src/: Makefile.am  Makefile.in  Rayleigh_source_c_1500_3000.f90  adaguc_standards.f90  byteswap.f90  dem_set_oswi.f90  file_utility.f90  grib_2dfd.f90  grib_set_oswi.f90  grib_types.f90  io_types.f90  libdem.f90  liboswi.f90  liboswi_debug_bathymetry_modulation.f90  liboswi_def_parameters.f90  liboswi_def_process.f90  liboswi_def_readwrite.f90  liboswi_def_types.f90  liboswi_def_variables.f90  liboswi_export_oswi.f90  liboswi_export_oswi_stack.f90  liboswi_filename.f90  liboswi_grid_transform.f90  liboswi_grid_transform_fun.f90  liboswi_in.f90  liboswi_in_grib.f90  liboswi_in_nc.f90  liboswi_modulate.f90  liboswi_ncfile.f90  liboswi_process.f90  liboswi_read.f90  liboswi_set_types.f90  liboswi_types.f90  liboswi_version.f90  liboswi_write.f90  math.f90  netcdf_ext.f90  oswi.f90  oswi2ascii.f90  oswi2ascii_command_args.f90  (+24 more)
tests/: Makefile.am  Makefile.in
