pkgdata_DATA = oswi_dem_bath_0.100.nc \
               oswi_dem_bath_0.125.nc \
               oswi_dem_bath_0.250.nc \
               oswi_dem_bath_0.360.nc \
               oswi_dem_bath_0.500.nc \
               oswi_dem_bath_1.000.nc \
               oswint.cpt ncl_default.cpt waxler.cpt

EXTRA_DIST =   oswi_dem_bath_0.100.nc \
               oswi_dem_bath_0.125.nc \
               oswi_dem_bath_0.250.nc \
               oswi_dem_bath_0.360.nc \
               oswi_dem_bath_0.500.nc \
               oswi_dem_bath_1.000.nc \
               oswint.cpt ncl_default.cpt waxler.cpt
